// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Intro 1`] = `
<div>
  <div
    class="fr-callout fr-mb-3w"
  >
    <h1
      class="fr-callout__title fr-text--lg"
    >
      Dashlord fabrique numérique
    </h1>
    <p
      class="fr-callout__text fr-text--lg"
    >
      <br />
      DashLord compile les données techniques issues de différents outils open-source.
      <br />
      Cette évaluation ne remplace en aucun cas une expertise manuelle, et seule la page d'accueil du site est ici évaluée.
      <br />
      Vous pouvez
       
      <a
        href="https://github.com/socialgouv/dashlord/issues/new"
        rel="noopener noreferrer"
        target="_blank"
      >
        soumettre de nouvelles URLs, proposer des corrections
      </a>
       
      ou
       
      <a
        href="https://github.com/orgs/SocialGouv/projects/13"
        rel="noopener noreferrer"
        target="_blank"
      >
        consulter la roadmap
      </a>
      .
      <br />
      <br />
    </p>
    <button
      class="fr-btn--md fr-btn"
      type="button"
    >
      <a
        href="/"
      >
        Accéder au tableau de bord
      </a>
    </button>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Google Lighthouse
      </h5>
      <a
        href="https://developers.google.com/web/tools/lighthouse"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Permet un audit automatique de page web :
      <br />
      <br />
      <li>
        Performances de chargement
      </li>
      <li>
        Bonnes pratiques SEO (référencement)
      </li>
      <li>
        Bonnes pratiques accessibilité (moteur Axe)
      </li>
      <li>
        Bonnes pratiques web
      </li>
      <br />
      <div
        class="fr-alert fr-alert--success"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Les mesures de performance sont un instantané, donc pas forcément représentatives
        </p>
      </div>
      <div
        class="fr-alert fr-alert--warning"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          <span>
            Les mesures d'accessibilité n'abordent pas du tout
             
            <a
              href="https://www.numerique.gouv.fr/publications/rgaa-accessibilite/"
              rel="noopener noreferrer"
              target="_blank"
            >
              le RGAA
            </a>
            .
          </span>
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Dependabot
      </h5>
      <a
        href="https://dependabot.com/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Recense les vulnérabilités de tes dépendances dans le code source
      <br />
      <br />
      <a
        href="https://docs.github.com/en/code-security/supply-chain-security/about-alerts-for-vulnerable-dependencies"
        rel="noopener noreferrer"
        target="_blank"
      >
        Scan des vulnérabilités des dépendances sur le dépôt Github du code
      </a>
      <br />
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Nécessite d'avoir activé Dependabot sur ses repositories GitHub
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Codescan
      </h5>
      <a
        href="https://docs.github.com/en/code-security/secure-coding/about-code-scanning"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Documentation
      </a>
    </div>
    <div
      class="body"
    >
      Recense les potentielles vulnérabilités dans ton code
      <br />
      <br />
      <li>
        Scan des potentielles vulnérabilités sur le dépôt Github du code
      </li>
      <li>
        Possibilité d'activer autant de scanner souhaité: CodeQL, etc
      </li>
      <li>
        Liste restreinte de langages couverts: C/C++, C#, Go, Java, JavaScript/TypeScript, Python
      </li>
       
      <br />
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Nécessite d'avoir activé CodeQL sur le repository
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Nmap
      </h5>
      <a
        href="https://nmap.org"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Nmap scan les vulnérabilités d'une machine (IP) associée à un domaine
      <br />
      <br />
      <a
        href="https://nmap.org/nsedoc/scripts/vulners.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Scan des ports ouverts avec vulnérabilités grâce au script vulners
      </a>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        OWASP Zed Attack Proxy
      </h5>
      <a
        href="https://www.zaproxy.org/docs/docker/baseline-scan/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Scan de vulnérabilités passif "baseline" qui permet de détecter des risques de sécurité.
      <br />
      <br />
      <li>
        Bonnes pratiques web
      </li>
      <li>
        Bonnes pratiques http
      </li>
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        testssl.sh
      </h5>
      <svg
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-left: 5px; cursor: pointer;"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://testssl.sh/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Évalue le niveau de confiance d'un certificat SSL
      <br />
      <br />
      <li>
        Bonnes pratiques de configuration
      </li>
      <li>
        Protocoles disponibles
      </li>
      <li>
        Compatibilité navigateurs
      </li>
      <li>
        Solidité des clés de chiffrement
      </li>
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Updown.io
      </h5>
      <svg
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-left: 5px; cursor: pointer;"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://updown.io/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Évalue la qualité de service rendue par le serveur
      <br />
      <br />
      <li>
        Temps de réponse
      </li>
      <li>
        Disponibilité
      </li>
      <li>
        Indice de performance : APDEX
      </li>
      <li>
        Validité des certificats TLS
      </li>
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Vous devez disposer d'un compte updown.io et d'une clé API
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Nucléi
      </h5>
      <a
        href="https://nuclei.projectdiscovery.io/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Détecte plus de 700 erreurs de configuration courantes sur les applications webs.
      <br />
      <br />
      <li>
        Sécurité
      </li>
      <li>
        Bonnes pratiques web
      </li>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Third-parties
      </h5>
      <a
        href="https://github.com/SocialGouv/thirdparties"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Code source
      </a>
    </div>
    <div
      class="body"
    >
      Liste tous les scripts externes chargés par une URL et qui peuvent avoir un impact sur :
      <br />
      <br />
      <li>
        Performances web
      </li>
      <li>
        Sécurité
      </li>
      <li>
        Vie privée
      </li>
      <br />
      <div
        class="fr-alert fr-alert--warning"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Certains script légitimes peuvent apparaitre dans cette catégorie s'ils sont hébergés sur d'autres serveurs
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        GeoIP2
      </h5>
      <a
        href="https://www.maxmind.com/en/geoip-demo"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Géolocalise tous les serveurs contactés lors de l'ouverture d'une URL.
      <br />
      <br />
      <li>
        Vie privée
      </li>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Wappalyzer
      </h5>
      <a
        href="https://www.wappalyzer.com/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Wappalyzer reconnait +1500 technologies web, Javascript, CMS, outillage...
      <br />
      <br />
      <li>
        Stack technique
      </li>
      <li>
        Obsolescence
      </li>
      <li>
        Parc
      </li>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Statistiques
      </h5>
    </div>
    <div
      class="body"
    >
      Vérifie si la page /stats existe
      <br />
      <br />
      Par exemple:
       
      <a
        href="https://beta.gouv.fr/stats"
        rel="noopener noreferrer"
        target="_blank"
      >
        Beta.gouv.fr
      </a>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Erreurs 404
      </h5>
    </div>
    <div
      class="body"
    >
      Explore le site web et détecte les liens brisés.
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Vulnérabilités Trivy
      </h5>
      <a
        href="https://aquasecurity.github.io/trivy/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Trivy permet de scanner les containers docker à la recherche de vulnérabilités connues.
      <br />
      <br />
      Trivy détecte les vulnérabilités niveau OS (Alpine, RHEL, CentOS, etc.) mais aussi niveau packages (Bundler, Composer, npm, yarn, etc.).
    </div>
  </div>
</div>
`;

exports[`Tools config Should render Intro with limited tools 1`] = `
<div>
  <div
    class="fr-callout fr-mb-3w"
  >
    <h1
      class="fr-callout__title fr-text--lg"
    >
      Dashlord fabrique numérique
    </h1>
    <p
      class="fr-callout__text fr-text--lg"
    >
      <br />
      DashLord compile les données techniques issues de différents outils open-source.
      <br />
      Cette évaluation ne remplace en aucun cas une expertise manuelle, et seule la page d'accueil du site est ici évaluée.
      <br />
      Vous pouvez
       
      <a
        href="https://github.com/socialgouv/dashlord/issues/new"
        rel="noopener noreferrer"
        target="_blank"
      >
        soumettre de nouvelles URLs, proposer des corrections
      </a>
       
      ou
       
      <a
        href="https://github.com/orgs/SocialGouv/projects/13"
        rel="noopener noreferrer"
        target="_blank"
      >
        consulter la roadmap
      </a>
      .
      <br />
      <br />
    </p>
    <button
      class="fr-btn--md fr-btn"
      type="button"
    >
      <a
        href="/"
      >
        Accéder au tableau de bord
      </a>
    </button>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Dependabot
      </h5>
      <a
        href="https://dependabot.com/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Recense les vulnérabilités de tes dépendances dans le code source
      <br />
      <br />
      <a
        href="https://docs.github.com/en/code-security/supply-chain-security/about-alerts-for-vulnerable-dependencies"
        rel="noopener noreferrer"
        target="_blank"
      >
        Scan des vulnérabilités des dépendances sur le dépôt Github du code
      </a>
      <br />
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Nécessite d'avoir activé Dependabot sur ses repositories GitHub
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Codescan
      </h5>
      <a
        href="https://docs.github.com/en/code-security/secure-coding/about-code-scanning"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Documentation
      </a>
    </div>
    <div
      class="body"
    >
      Recense les potentielles vulnérabilités dans ton code
      <br />
      <br />
      <li>
        Scan des potentielles vulnérabilités sur le dépôt Github du code
      </li>
      <li>
        Possibilité d'activer autant de scanner souhaité: CodeQL, etc
      </li>
      <li>
        Liste restreinte de langages couverts: C/C++, C#, Go, Java, JavaScript/TypeScript, Python
      </li>
       
      <br />
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Nécessite d'avoir activé CodeQL sur le repository
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Nmap
      </h5>
      <a
        href="https://nmap.org"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Nmap scan les vulnérabilités d'une machine (IP) associée à un domaine
      <br />
      <br />
      <a
        href="https://nmap.org/nsedoc/scripts/vulners.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Scan des ports ouverts avec vulnérabilités grâce au script vulners
      </a>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        OWASP Zed Attack Proxy
      </h5>
      <a
        href="https://www.zaproxy.org/docs/docker/baseline-scan/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Scan de vulnérabilités passif "baseline" qui permet de détecter des risques de sécurité.
      <br />
      <br />
      <li>
        Bonnes pratiques web
      </li>
      <li>
        Bonnes pratiques http
      </li>
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        testssl.sh
      </h5>
      <svg
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-left: 5px; cursor: pointer;"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://testssl.sh/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Évalue le niveau de confiance d'un certificat SSL
      <br />
      <br />
      <li>
        Bonnes pratiques de configuration
      </li>
      <li>
        Protocoles disponibles
      </li>
      <li>
        Compatibilité navigateurs
      </li>
      <li>
        Solidité des clés de chiffrement
      </li>
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Updown.io
      </h5>
      <svg
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="margin-left: 5px; cursor: pointer;"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://updown.io/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Évalue la qualité de service rendue par le serveur
      <br />
      <br />
      <li>
        Temps de réponse
      </li>
      <li>
        Disponibilité
      </li>
      <li>
        Indice de performance : APDEX
      </li>
      <li>
        Validité des certificats TLS
      </li>
      <br />
      <div
        class="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Vous devez disposer d'un compte updown.io et d'une clé API
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Nucléi
      </h5>
      <a
        href="https://nuclei.projectdiscovery.io/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Détecte plus de 700 erreurs de configuration courantes sur les applications webs.
      <br />
      <br />
      <li>
        Sécurité
      </li>
      <li>
        Bonnes pratiques web
      </li>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Third-parties
      </h5>
      <a
        href="https://github.com/SocialGouv/thirdparties"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Code source
      </a>
    </div>
    <div
      class="body"
    >
      Liste tous les scripts externes chargés par une URL et qui peuvent avoir un impact sur :
      <br />
      <br />
      <li>
        Performances web
      </li>
      <li>
        Sécurité
      </li>
      <li>
        Vie privée
      </li>
      <br />
      <div
        class="fr-alert fr-alert--warning"
        role="alert"
      >
        <p
          class="fr-alert__title"
        />
        <p>
          Certains script légitimes peuvent apparaitre dans cette catégorie s'ils sont hébergés sur d'autres serveurs
        </p>
      </div>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        GeoIP2
      </h5>
      <a
        href="https://www.maxmind.com/en/geoip-demo"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Géolocalise tous les serveurs contactés lors de l'ouverture d'une URL.
      <br />
      <br />
      <li>
        Vie privée
      </li>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Wappalyzer
      </h5>
      <a
        href="https://www.wappalyzer.com/"
        rel="noreferrer noopener"
        style="float: right;"
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div
      class="body"
    >
      Wappalyzer reconnait +1500 technologies web, Javascript, CMS, outillage...
      <br />
      <br />
      <li>
        Stack technique
      </li>
      <li>
        Obsolescence
      </li>
      <li>
        Parc
      </li>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="banner"
    >
      <h5
        class="mainTitle"
      >
        Erreurs 404
      </h5>
    </div>
    <div
      class="body"
    >
      Explore le site web et détecte les liens brisés.
    </div>
  </div>
</div>
`;
